data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1504.wast
;; 5. **Test Description:**    - A `block` with multiple `call` instructions interspersed with `unreachable` instructions. Each call must return a specific value, and the test verifies the trap before further calls execute.    - **Constraint:** Ensures each `unreachable` halts block execution at the correct point.    - **Improper Function Call or Return Handling:** Validates proper call and return handling interruptions within blocks.

(assert_invalid
  (module
    (type $t0 (func (result i32)))
    (func $f0 (result i32)
      (unreachable)
      (i32.const 42)
    )
    (func $f1 (result i32)
      (i32.const 1)
    )
    (func $test (result i32)
      (block (result i32)
        (call $f1)
        (call $f0)
        (call $f1)
      )
    )
  )
  "type mismatch"
)